# jupyter-tempvars

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Testing Scratch.ipynb  conftest.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
nb/: Python Bytes 279.ipynb  README Demo.ipynb  Testing Scratch.ipynb
src/jupyter_tempvars/: __init__.py  __main__.py  cli.py  comm.py  const.py  error.py  ipython_extension.py  register.py  register_ipython.py  register_jupyter.py  version.py
src/jupyter_tempvars/extension/: jupyter_tempvars.js  jupyter_tempvars.yml
tests/: test_stub.py
