[metadata]
name = jupyter-tempvars
description = Jupyter notebook extension providing per-cell temporary variables
url = https://github.com/bskinn/jupyter-tempvars
project_urls =
    Changelog=https://github.com/bskinn/jupyter-tempvars/blob/main/CHANGELOG.md
    Docs=https://jupyter-tempvars.readthedocs.io/en/stable/
    Thank=https://twitter.com/btskinn
    Donate=https://github.com/sponsors/bskinn
license = MIT License
license_file = LICENSE.txt
platforms = any
author = Brian Skinn
author_email = brian.skinn@gmail.com
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Framework :: Jupyter
    Framework :: JupyterLab
    Framework :: JupyterLab :: Extensions
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha
keywords = jupyter, notebook, extension, temporary variables

[options]
install_requires =
    tempvars
include_package_data = True

python_requires = >=3.8
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
* = ['extension/jupyter_tempvars.*']
